--- a/demo/demo-edit-layout.html
+++ b/demo/demo-edit-layout.html
@@ -31,7 +31,7 @@ The `user-validator` provides
     <template>
 
         <earth-editable-layout>
-            <div slot="bannerTitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
+            <div slot="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
             <ul class="dropdown-content">
                 <li><a href="javascript:void(0)">item 1</a></li>
                 <li><a href="javascript:void(0)">item 2</a></li>
