--- a/demo/index2.html
+++ b/demo/index2.html
@@ -12,15 +12,30 @@
     <link rel="import" href="sample-content.html">
 
 
+    <link rel="import" href="../../paper-input/paper-input.html">
+
+    <link rel="import" href="../../air-cruddy/air-cruddy-elasticsearch.html">
+
 </head>
 <body unresolved>
+<dom-bind>
+
+<template>
+
 <earth-editable-layout>
     <div slot="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit</div>
     <div slot="content">
         <h1>Page content</h1>
+        <air-cruddy-elasticsearch data="{{data}}"  url="http://localhost:9200/5elements/5elements"
+                                  entity-id="1" >
+            <paper-input label="Firstname" value="{{data.firstname}}" required></paper-input>
+            <paper-input label="Lastname" value="{{data..lastname}}" required></paper-input>
+        </air-cruddy-elasticsearch>
         <sample-content size="100"></sample-content>
         <div>End sample</div>
     </div>
 </earth-editable-layout>
+</template>
+</dom-bind>
 
 </body>
