--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -3,8 +3,11 @@
 
 <link rel="import" href="../iron-icons/iron-icons.html">
 
+
 <link rel="import" href="../iron-flex-layout/iron-flex-layout.html">
 <link rel="import" href="../iron-flex-layout/iron-flex-layout-classes.html">
+
+<link rel="import" href="../iron-dropdown/iron-dropdown.html">
 
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 
@@ -39,22 +42,39 @@
             app-drawer-layout:not([narrow]) [drawer-toggle] {
                 display: none;
             }
+
+            /*[main-title] {*/
+                /*margin-left: 64px;*/
+                /*font-size: 32px;*/
+                /*font-weight: 300;*/
+            /*}*/
+            /*[condensed-title] {*/
+                /*margin-left: 20px;*/
+                /*font-weight: 300;*/
+            /*}*/
+
         </style>
 
 
-            <app-header-layout>
+            <app-header-layout fullbleed>
 
-                <app-header slot="header" fixed effects="waterfall">
+                <app-header slot="header" condenses fixed effects="waterfall">
                     <app-toolbar>
                         <paper-icon-button icon="icons:arrow-back" on-tap="_handleBack"></paper-icon-button>
                         <div main-title>
                             <slot name="title"></slot>
                         </div>
                         <paper-icon-button icon="icons:check"  disabled$="[[!status.isDirty]]"></paper-icon-button>
-                        <!--<paper-icon-button icon="icons:refresh"></paper-icon-button>-->
-                        <!--<paper-icon-button icon="icons:clear"></paper-icon-button>-->
-                        <!--<paper-icon-button icon="icons:more-vert"></paper-icon-button>-->
+                        <iron-dropdown horizontal-align="right" vertical-align="top">
+                            <paper-icon-button icon="icons:refresh"></paper-icon-button>
+                            <paper-icon-button icon="icons:clear"></paper-icon-button>
+                            <paper-icon-button icon="icons:more-vert"></paper-icon-button>
+                        </iron-dropdown>
                     </app-toolbar>
+                    <!--<app-toolbar class="middle">Hello </app-toolbar>-->
+                    <!--<app-toolbar class="bottom">-->
+                        <!--<div main-title>Pharrell Williams</div>-->
+                    <!--</app-toolbar>-->
                 </app-header>
 
                 <slot name="content"></slot>
