Clean visiotr ndoes

--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -147,42 +147,41 @@
                 return this._cruddyElements;
             }
 
+            /**
+             * Visist all child nodes of parent in order to find validatable nodes
+             * @param parent to visit
+             * @param filter for the nodes
+             * @returns A Array Od filters nodes
+             * @private
+             */
             _computeFilterNodes(parent, filter) {
                 const nodes = Array.prototype.slice.call(Polymer.FlattenedNodesObserver.getFlattenedNodes(parent));
                 const elements = nodes.reduce((acc, el) => {
-                    const elTagName = el.tagName;
                     // Exclude not wanted search
                     // ----------------------------
-                    // To manage the #text
-                    if (!elTagName) {
+                    const elTagName = el.tagName;
+                    if (!elTagName || elTagName === 'STYLE') {
                         return acc;
                     }
-                    switch (el.tagName) {
-                        case 'STYLE':
-                            return acc;
-                    }
-                    // air-cruddy Node
+                    // node with validation method
                     // ----------------------------
                     if (filter(el)) {
                         acc.push(el);
                         return acc;
                     }
-                    // Search in Shadow root
+                    // Determine Parent Type  Open Shadow root or direct Child
                     // ----------------------------
                     const shadowNode = el.shadowRoot;
-                    if (shadowNode && shadowNode.mode === 'open') {
-                        const childElt = this._computeValidatableElements(shadowNode, filter);
-                        if (childElt && childElt.length > 0) {
-                            acc.push(...childElt);
-                        }
-                        return acc;
+                    let elChild;
+                    if (shadowNode && (shadowNode.mode === 'open')) {
+                        elChild = shadowNode;
+                    } else {
+                        elChild = el.children;
                     }
                     // Search in Parents
                     // ----------------------------
-                    const elChild = el.children;
-//                console.log('Test All child', el, elChild);
                     if (elChild) {
-                        const childElt = this._computeValidatableElements(el, filter);
+                        const childElt = this._computeFilterNodes(elChild, filter);
                         if (childElt && childElt.length > 0) {
                             acc.push(...childElt);
                         }
@@ -191,7 +190,7 @@
                     return acc;
                 }, []);
                 return elements;
-            }
+            };
 
 
             // --- Cruddy Action
