--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -114,6 +114,33 @@
                 };
             }
 
+            // --- Life Cycle
+            // --- ---------------------------
+            constructor() {
+                super();
+                this._boundListenerStatusChanged = this._handleStatusChanged.bind(this);
+            }
+            connectedCallback() {
+                console.log('================================================');
+                console.log('connectedCallback ==', this._boundListenerStatusChanged);
+                this.addEventListener('status-changed', this._boundListenerStatusChanged);
+                super.connectedCallback();
+            }
+            disconnectedCallback() {
+                super.disconnectedCallback();
+                this.removeEventListener('status-changed', this._boundListenerStatusChanged);
+            }
+
+            // --- Status
+            // --- ---------------------------
+
+            _handleStatusChanged(e) {
+                console.log('-------------------------------------');
+                console.log('-- handle status changed : ', e.detail);
+                console.log('-------------------------------------');
+            }
+            // --- Method
+            // --- ---------------------------
             isDirty() {
                 // TODO Implement method
                 return true;
@@ -142,7 +169,6 @@
                         if (node[funcName]) {
                             isValid= true;
                         }
-                        console.log('-- test node', node, '===>', isValid);
                         return isValid;
                     });
                     this._cruddyElements = crudies || [];
