air-cruddy-status-changed

--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -139,8 +139,7 @@
             // --- Method
             // --- ---------------------------
             isDirty() {
-                // TODO Implement method
-                return true;
+                return this.status && this.status.isDirty;
             }
 
             _handleBack() {
