--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -82,7 +82,7 @@
                 <!--</app-toolbar>-->
             </app-header>
             <div>
-                <paper-progress id="progress" indeterminate="[[false]]" class="blue"></paper-progress>
+                <paper-progress id="progress" indeterminate="[[status.tracing.processing]]" class="blue"></paper-progress>
 
                 <slot id="content" name="content"></slot>
             </div>
