--- a/earth-editable-layout.html
+++ b/earth-editable-layout.html
@@ -10,6 +10,8 @@
 
 <link rel="import" href="../paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../paper-progress/paper-progress.html">
+<link rel="import" href="../paper-dialog/paper-dialog.html">
+<link rel="import" href="../paper-button/paper-button.html">
 
 
 <link rel="import" href="../app-layout/app-drawer/app-drawer.html">
@@ -22,7 +24,7 @@
 
 <dom-module id="earth-editable-layout">
     <template>
-        <style is="custom-style" include="iron-flex iron-flex-alignment">
+        <style include="iron-flex iron-flex-alignment">
             :host {
                 display: block;
                 margin: 0;
@@ -49,6 +51,13 @@
 
             }
 
+            /*[slot="dropdown-content"] {*/
+                /*background-color: white;*/
+                /*line-height: 20px;*/
+                /*border-radius: 3px;*/
+                /*box-shadow: 0px 2px 6px #ccc;*/
+            /*}*/
+
             /*[main-title] {*/
             /*margin-left: 64px;*/
             /*font-size: 32px;*/
@@ -66,17 +75,21 @@
 
             <app-header slot="header" condenses fixed effects="waterfall">
                 <app-toolbar>
-                    <paper-icon-button icon="icons:arrow-back" on-tap="_handleBack"></paper-icon-button>
+                    <paper-icon-button icon="icons:arrow-back" on-tap="close"></paper-icon-button>
                     <div main-title>
                         <slot name="title"></slot>
                     </div>
                     <paper-icon-button icon="icons:check" disabled$="[[!status.isDirty]]"
                                        on-tap="save"></paper-icon-button>
-                    <iron-dropdown horizontal-align="right" vertical-align="top">
-                        <paper-icon-button icon="icons:refresh"></paper-icon-button>
-                        <paper-icon-button icon="icons:clear"></paper-icon-button>
-                        <paper-icon-button icon="icons:more-vert"></paper-icon-button>
+                    <!-- More menu -->
+                    <!--<paper-icon-button icon="icons:more-vert"  on-tap="_handleOpenMoreDropdown"></paper-icon-button>-->
+                    <iron-dropdown id="menuMoreDropdown" horizontal-align="right" vertical-align="top" >
+                        <div slot="dropdown-content">
+                            <paper-icon-button icon="icons:refresh"></paper-icon-button>
+                            <paper-icon-button icon="icons:clear"></paper-icon-button>
+                        </div>
                     </iron-dropdown>
+
                 </app-toolbar>
                 <!--<app-toolbar class="middle">Hello </app-toolbar>-->
                 <!--<app-toolbar class="bottom">-->
@@ -92,13 +105,21 @@
                     </slot>
                 </template>
 
-                <template is="dom-if" if="[[isData]]">
+                <!--<template is="dom-if" if="[[true]]">-->
                     <slot id="content" name="content"></slot>
-                </template>
+                <!--</template>-->
             </div>
 
         </app-header-layout>
 
+        <paper-dialog id="actions" modal>
+            <h2>Dismiss Modification</h2>
+            <p>Document modification voulez vous abandonner les modifications ?</p>
+            <div class="buttons">
+                <paper-button dialog-dismiss on-tap="closeForce">Decline</paper-button>
+                <paper-button dialog-confirm autofocus on-tap="saveAndClose">Accept</paper-button>
+            </div>
+        </paper-dialog>
 
     </template>
 
@@ -132,9 +153,7 @@
                 };
             }
 
-            _handleToggleProgress() {
-                this.progress = !this.progress;
-            }
+
 
             // --- Life Cycle
             // --- ---------------------------
@@ -144,8 +163,8 @@
             }
 
             connectedCallback() {
-                this.addEventListener('air-cruddy-status', this._boundListenerStatusChanged);
                 super.connectedCallback();
+                this.addEventListener('air-cruddy-status', this._boundListenerStatusChanged);
             }
 
             disconnectedCallback() {
@@ -170,17 +189,20 @@
                 return this.status && this.status.isDirty;
             }
 
-            _handleBack() {
-                if (this.isDirty()) {
-                    this.openDialogReset();
-                } else {
-                    const detail = {};
-                    this.dispatchEvent(new CustomEvent('earth-layout-back', {detail, bubbles: true, composed: true}));
-                }
+
+
+            // --- Actions
+            // --- ---------------------------
+            openDialogSaveOrDismiss() {
+                this.$.actions.open();
             }
 
-            openDialogCancel() {
+            _handleToggleProgress() {
+                this.progress = !this.progress;
+            }
 
+            _handleOpenMoreDropdown() {
+                this.$.menuMoreDropdown.open();
             }
 
             // --- Cruddy Locator
@@ -188,6 +210,7 @@
 
             _getAirCrudyNodes(funcName) {
                 if (!this._cruddyElements) {
+                    console.log('_getAirCrudyNodes : ', this.$.content);
                     const crudies = this._computeFilterNodes(this.$.content, (node) => {
                         let isValid = false;
                         if (node[funcName]) {
@@ -200,26 +223,66 @@
                 return this._cruddyElements;
             }
 
-
-            // --- Cruddy Action
+            // --- Layout Api
             // --- ---------------------------
-            _callCruddyFunction(funcName) {
-                const cruddyElts = this._getAirCrudyNodes(funcName);
-                cruddyElts.forEach((elt) => {
-                    if (typeof elt[funcName] === 'function') {
-                        elt[funcName]();
-                    }
+
+            close() {
+                if (this.isDirty()) {
+                    this.openDialogSaveOrDismiss();
+                } else {
+                   this.closeForce();
+                }
+            }
+
+            closeForce() {
+                this._fireEventClose('close');
+            }
+
+            save() {
+                return Promise.all(this._callCruddyFunction('save'));
+            }
+
+            saveAndClose() {
+                this.save().then( ()=> {
+                    return this._fireEventClose('save');
+                });
+            }
+
+            delete() {
+                return Promise.all(this._callCruddyFunction('delete')).then(()=> {
+                    return this._fireEventClose('delete');
                 });
             }
 
 
-            save() {
-                this._callCruddyFunction('save');
+            _fireEventClose(action) {
+                const detail = {
+                    action
+                };
+                console.log('Fire event earth-layout-close');
+                this.dispatchEvent(new CustomEvent('earth-layout-close', {detail, bubbles: true, composed: true}));
+                return detail;
             }
 
-            delete() {
-                this._callCruddyFunction('delete');
+
+            // --- Cruddy Action
+            // --- ---------------------------
+            /**
+             * Call a function name on an AirCruddyElements
+             */
+            _callCruddyFunction(funcName) {
+                // Search the marking pai
+                const cruddyElts = this._getAirCrudyNodes('airCruddyElements');
+                const restults = cruddyElts.map((elt) => {
+                    if (typeof elt[funcName] === 'function') {
+                        return elt[funcName]();
+                    }
+                });
+                return restults;
             }
+
+
+
 
             // --- Utils
             // --- ---------------------------
